--- a/substack/articles/test_data_part_1/scratchpad.ipynb
+++ b/substack/articles/test_data_part_1/scratchpad.ipynb
@@ -47,6 +47,84 @@
     "\n",
     "cn.sql(parquet_sql)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/06/04 14:50:44 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "spark = SparkSession.builder.getOrCreate()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/matthewmartin\n"
+     ]
+    }
+   ],
+   "source": [
+    "import uuid, random, os\n",
+    "from pyspark.sql.functions import current_date, udf\n",
+    "from pyspark.sql.types import StringType, IntegerType\n",
+    "\n",
+    "def crt_uuid():\n",
+    "    return str(uuid.uuid4())\n",
+    "\n",
+    "def crt_int():\n",
+    "    return random.randint(0, 100)\n",
+    "\n",
+    "s_crt_uuid = udf(crt_uuid, StringType())\n",
+    "s_crt_int = udf(crt_int, IntegerType())\n",
+    "\n",
+    "home_dir = os.path.expanduser(\"~\")\n",
+    "print(home_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/matthewmartin/test_dummy_data/spark/\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = spark.range(1,5+1) \\\n",
+    "    .withColumn(\"uuid\", s_crt_uuid()) \\\n",
+    "    .withColumn(\"rpt_dt\", current_date()) \\\n",
+    "    .withColumn(\"rand_val\", s_crt_int()) \\\n",
+    "    .toDF('row_id', 'uuid', 'rpt_dt', 'rand_val')\n",
+    "#df.show()\n",
+    "\n",
+    "f_path = os.path.join(home_dir, \"test_dummy_data/spark/\")\n",
+    "print(f_path)\n",
+    "\n",
+    "df.write.mode('overwrite').parquet(f_path)\n"
+   ]
   }
  ],
  "metadata": {
