--- a/substack/articles/test_data_part_3/scratchpad.ipynb
+++ b/substack/articles/test_data_part_3/scratchpad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aerobic Instructor\n"
+     ]
+    }
+   ],
    "source": [
     "# from mimesis import Person, Address\n",
     "# from mimesis.locales import Locale\n",
@@ -27,6 +35,8 @@
     "adrs = Address(Locale.EN)\n",
     "dt = Datetime(Locale.EN)\n",
     "n = Numeric()\n",
+    "\n",
+    "print(peep.occupation())\n",
     "\n",
     "\n",
     "rows = 50_000\n",
