--- a/substack/articles/test_data_part_2/scratchpad.ipynb
+++ b/substack/articles/test_data_part_2/scratchpad.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/06/11 08:04:16 WARN Utils: Your hostname, MattMBP.local resolves to a loopback address: 127.0.0.1; using 10.64.165.33 instead (on interface en0)\n",
+      "24/06/11 08:04:16 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/06/11 08:04:16 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "spark = SparkSession.builder \\\n",
@@ -13,6 +25,35 @@
     "    .config(\"spark.executor.memory\", \"8g\") \\\n",
     "    .config(\"spark.executor.cores\", \"8\") \\\n",
     "    .getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|row_id|\n",
+      "+------+\n",
+      "|     1|\n",
+      "|     2|\n",
+      "|     3|\n",
+      "|     4|\n",
+      "|     5|\n",
+      "+------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = spark.range(1,500_000).toDF('row_id')\n",
+    "df.write.mode('overwrite').parquet('test.parquet')\n",
+    "df.show(5)\n"
    ]
   },
   {
