--- a/substack/articles/2024.06.13 - timestamps dont line up/scratchpad.ipynb
+++ b/substack/articles/2024.06.13 - timestamps dont line up/scratchpad.ipynb
@@ -121,6 +121,13 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "to do:\n",
+    "    harder this query\n",
+    "    explain the load shell script and chmod stuff\n",
+    "    publish\n",
+    "\"\"\"\n",
+    "\n",
     "sql = \"\"\"\n",
     "    with exd as (\n",
     "        select dtl.order_id, dtl.event_ts, ex.except_ts, ex.ex_desc\n",
