--- a/substack/articles/2024.07-12 - Flattening XML/scratchpad.ipynb
+++ b/substack/articles/2024.07-12 - Flattening XML/scratchpad.ipynb
@@ -104,22 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "<states><state><name>California</name><population>39538223</population><city>Los Angeles</city></state><state><name>Texas</name><population>29145505</population><city>Houston</city></state><state><name>Florida</name><population>21538187</population><city>Miami</city></state><state><name>New York</name><population>20201249</population><city>New York City</city></state><state><name>Pennsylvania</name><population>13002700</population><city>Philadelphia</city></state><state><name>Illinois</name><population>12812508</population><city>Chicago</city></state><state><name>Ohio</name><population>11799448</population><city>Columbus</city></state><state><name>Georgia</name><population>10711908</population><city>Atlanta</city></state><state><name>North Carolina</name><population>10439388</population><city>Charlotte</city></state><state><name>Michigan</name><population>10077331</population><city>Detroit</city></state></states>\n",
-      "states.csv\n",
-      "\n",
-      "<states><state land_size=\"423967\"><name>California</name><population>39538223</population><city>Los Angeles</city></state><state land_size=\"695662\"><name>Texas</name><population>29145505</population><city>Houston</city></state><state land_size=\"170312\"><name>Florida</name><population>21538187</population><city>Miami</city></state><state land_size=\"141297\"><name>New York</name><population>20201249</population><city>New York City</city></state><state land_size=\"119280\"><name>Pennsylvania</name><population>13002700</population><city>Philadelphia</city></state><state land_size=\"149995\"><name>Illinois</name><population>12812508</population><city>Chicago</city></state><state land_size=\"116096\"><name>Ohio</name><population>11799448</population><city>Columbus</city></state><state land_size=\"153910\"><name>Georgia</name><population>10711908</population><city>Atlanta</city></state><state land_size=\"139391\"><name>North Carolina</name><population>10439388</population><city>Charlotte</city></state><state land_size=\"250487\"><name>Michigan</name><population>10077331</population><city>Detroit</city></state></states>\n",
-      "states2.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x_path = 'states.xml'\n",
     "c_path = 'states.csv'\n",
@@ -131,6 +118,91 @@
     "\n",
     "flatten_xml_to_csv(x_path, c_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def gen_xml_varying_elements():\n",
+    "    import xml.etree.ElementTree as ET\n",
+    "    from xml.dom.minidom import parseString\n",
+    "\n",
+    "    root = ET.Element(\"states\")\n",
+    "\n",
+    "    data = [\n",
+    "        {\"name\": \"Georgia\", \"population\": \"10711908\", \"largest_city\": \"Atlanta\", \"land_mass_sqmi\": \"57906\"},\n",
+    "        {\"name\": \"California\", \"population\": \"39538223\", \"largest_city\": \"Los Angeles\", \"land_mass_sqmi\": \"163696\", \"water_sqmi\": \"7737\"},\n",
+    "    ]\n",
+    "\n",
+    "    for state in data:\n",
+    "        state_element = ET.SubElement(root, \"state\")\n",
+    "        name_element = ET.SubElement(state_element, \"name\")\n",
+    "        name_element.text = state[\"name\"]\n",
+    "        population_element = ET.SubElement(state_element, \"population\")\n",
+    "        population_element.text = state[\"population\"]\n",
+    "        city_element = ET.SubElement(state_element, \"largest_city\")\n",
+    "        city_element.text = state[\"largest_city\"]\n",
+    "        land_mass_element = ET.SubElement(state_element, \"land_mass_sqmi\")\n",
+    "        land_mass_element.text = state[\"land_mass_sqmi\"]\n",
+    "        if \"water_sqmi\" in state:\n",
+    "            water_mass_element = ET.SubElement(state_element, \"water_sqmi\")\n",
+    "            water_mass_element.text = state[\"water_sqmi\"]\n",
+    "\n",
+    "    # Convert the ElementTree to a string\n",
+    "    rough_string = ET.tostring(root, encoding=\"utf-8\")\n",
+    "    # Parse the string with minidom for pretty printing\n",
+    "    reparsed = parseString(rough_string)\n",
+    "    pretty_xml_as_string = reparsed.toprettyxml(indent=\"  \")\n",
+    "\n",
+    "    # Write the pretty-printed XML to a file\n",
+    "    with open(\"./files/states_simple.xml\", \"w\", encoding=\"utf-8\") as f:\n",
+    "        f.write(pretty_xml_as_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_xml_varying_elements()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         name  population largest_city  land_mass_sqmi  water_sqmi\n",
+      "0     Georgia    10711908      Atlanta           57906         NaN\n",
+      "1  California    39538223  Los Angeles          163696      7737.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the XML file\n",
+    "xml_file = './files/states_simple.xml'\n",
+    "df = pd.read_xml(xml_file)\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -225,6 +297,47 @@
     "    tree.write(\"states2.xml\", encoding=\"utf-8\", xml_declaration=True)\n",
     "\n",
     "gen_xml_doc_2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   land_size            name  population           city\n",
+      "0     423967      California    39538223    Los Angeles\n",
+      "1     695662           Texas    29145505        Houston\n",
+      "2     170312         Florida    21538187          Miami\n",
+      "3     141297        New York    20201249  New York City\n",
+      "4     119280    Pennsylvania    13002700   Philadelphia\n",
+      "5     149995        Illinois    12812508        Chicago\n",
+      "6     116096            Ohio    11799448       Columbus\n",
+      "7     153910         Georgia    10711908        Atlanta\n",
+      "8     139391  North Carolina    10439388      Charlotte\n",
+      "9     250487        Michigan    10077331        Detroit\n",
+      "Data has been written to ./files/states3.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the XML file\n",
+    "xml_file = './files/states2.xml'\n",
+    "df = pd.read_xml(xml_file)\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "print(df)\n",
+    "\n",
+    "# Save the DataFrame to a CSV file\n",
+    "csv_file = './files/states3.csv'\n",
+    "df.to_csv(csv_file, index=False)\n",
+    "\n",
+    "print(f\"Data has been written to {csv_file}\")\n"
    ]
   }
  ],
