--- a/substack/articles/2024.07-12 - Flattening XML/scratchpad.ipynb
+++ b/substack/articles/2024.07-12 - Flattening XML/scratchpad.ipynb
@@ -121,12 +121,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_simple_xml():\n",
+    "    import xml.etree.ElementTree as ET\n",
+    "    from xml.dom.minidom import parseString\n",
+    "\n",
+    "    root = ET.Element(\"states\")\n",
+    "\n",
+    "    data = [\n",
+    "        {\"name\": \"Texas\", \"population\": \"30503301\", \"largest_city\": \"Houston\", \"land_mass_sqmi\": \"261232\"},\n",
+    "        {\"name\": \"New York\", \"population\": \"19571216\", \"largest_city\": \"New York City\", \"land_mass_sqmi\": \"54555\"},\n",
+    "    ]\n",
+    "\n",
+    "    for state in data:\n",
+    "        state_element = ET.SubElement(root, \"state\")\n",
+    "        name_element = ET.SubElement(state_element, \"name\")\n",
+    "        name_element.text = state[\"name\"]\n",
+    "        population_element = ET.SubElement(state_element, \"population\")\n",
+    "        population_element.text = state[\"population\"]\n",
+    "        city_element = ET.SubElement(state_element, \"largest_city\")\n",
+    "        city_element.text = state[\"largest_city\"]\n",
+    "        land_mass_element = ET.SubElement(state_element, \"land_mass_sqmi\")\n",
+    "        land_mass_element.text = state[\"land_mass_sqmi\"]\n",
+    "\n",
+    "    # Convert the ElementTree to a string\n",
+    "    rough_string = ET.tostring(root, encoding=\"utf-8\")\n",
+    "    # Parse the string with minidom for pretty printing\n",
+    "    reparsed = parseString(rough_string)\n",
+    "    pretty_xml_as_string = reparsed.toprettyxml(indent=\"  \")\n",
+    "\n",
+    "    # Write the pretty-printed XML to a file\n",
+    "    with open(\"./files/states_simple.xml\", \"w\", encoding=\"utf-8\") as f:\n",
+    "        f.write(pretty_xml_as_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def gen_xml_varying_elements():\n",
+    "def gen_simple_xml_varying_elements():\n",
     "    import xml.etree.ElementTree as ET\n",
     "    from xml.dom.minidom import parseString\n",
     "\n",
@@ -158,22 +197,23 @@
     "    pretty_xml_as_string = reparsed.toprettyxml(indent=\"  \")\n",
     "\n",
     "    # Write the pretty-printed XML to a file\n",
-    "    with open(\"./files/states_simple.xml\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    with open(\"./files/states_simple_varying_elements.xml\", \"w\", encoding=\"utf-8\") as f:\n",
     "        f.write(pretty_xml_as_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_xml_varying_elements()"
+    "gen_simple_xml()\n",
+    "gen_simple_xml_varying_elements()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +230,7 @@
     "import pandas as pd\n",
     "\n",
     "# Read the XML file\n",
-    "xml_file = './files/states_simple.xml'\n",
+    "xml_file = './files/states_simple_varying_elements.xml'\n",
     "df = pd.read_xml(xml_file)\n",
     "\n",
     "# Display the DataFrame\n",
